# free-duolingo-plus

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: enter-your-referral-code-link.md
src/: duo_api.rs  main.rs
