[package]
name = "free-duolingo-plus"
version = "1.0.0"
edition = "2021"
description = "Simple CLI tool to create dummy accounts with referral links to give yourself free Plus."

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
fake = "2.5.0"
indicatif = "0.16.2"
rand = "0.8.5"
reqwest = { version = "0.11.11", features = ["json", "cookies"] }
serde = { version = "1.0.140", features = ["derive"] }
tokio = { version = "1.20.0", features = ["full"] }
uuid = { version = "1.1.2", features = ["v4"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
